# SwingPython

./: .env.save  README.md  pyproject.toml
samples/: basic_statistics.py
src/: basicStaticstics.py  contactList.py  dialpadUtility.py  temperatureSwitch.py
src/package_Swing/: GithubProfile.py  basicStaticstics.py  dialpad.py  mongoContacts.py  weatherReport.py
src/tests/: tests.py
