[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "package_Swing"
version = "0.0.1"
authors = [
  { name="Swing", email="swingfsy@outlook.com" },
]
description = "Swing's python project package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/swingfu/SwingPython"
"Bug Tracker" = "https://github.com/swingfu/SwingPython/issues"